fixed UI align

--- a/FenwayScoreboard/styles.css
+++ b/FenwayScoreboard/styles.css
@@ -55,7 +55,7 @@ text-align: justify;
 
 .team_drop{
 
-    width: 30%;
+    width: 20;
 
 }
 table{
